--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-rate-limit": "^6.5.1",
-    "google-spreadsheet": "^3.3.0"
+    "google-spreadsheet": "^3.3.0",
+    "helmet": "^5.1.1"
   },
   "devDependencies": {
     "eslint": "^8.22.0",
